# twitter-rs

./: Cargo.toml
oauth1-twitter/: Cargo.toml  README.md
oauth1-twitter/demo/: Cargo.toml
oauth1-twitter/demo/src/: oauth1_twitter_three_legged_oauth_flow.rs
oauth1-twitter/src/: lib.rs  utils.rs
oauth1-twitter/src/endpoints/: access_token.rs  authenticate.rs  authorize.rs  common.rs  invalidate_token.rs  mod.rs  request_token.rs
oauth1-twitter/src/objects/: authentication_access_token.rs  authentication_request_token.rs  callback_url_query.rs  consumer_key.rs  mod.rs  response_body_fail.rs
oauth1-twitter/tests/response_body_files/: access_token.txt  invalidate_access_token.json  invalidate_access_token__401.json  request_token.txt  request_token__400.json
twitter-api-v1/: Cargo.toml  README.md
twitter-api-v1/demo/: Cargo.toml
twitter-api-v1/demo/src/: create_tweet.rs  image.rs  show_user.rs  upload_image.rs  upload_video.rs  video.rs
twitter-api-v1/src/: lib.rs  secrets.rs
twitter-api-v1/src/endpoints/: common.rs  mod.rs
twitter-api-v1/src/endpoints/media/: mod.rs  upload_media.rs
twitter-api-v1/src/endpoints/tweets/: manage_tweets.rs
twitter-api-v1/src/endpoints/users/: lookup.rs
twitter-api-v1/src/objects/: error.rs  media.rs  mod.rs  user.rs
twitter-api-v1/tests/response_body_json_files/: README.md  media__get_upload_status__ok_failed.json  media__get_upload_status__ok_in_progress.json  media__get_upload_status__ok_in_progress__real.json  media__get_upload_status__ok_succeeded.json  media__get_upload_status__ok_succeeded__real.json  media__upload_finalize__ok_async.json  media__upload_finalize__ok_async__real.json  media__upload_finalize__ok_sync.json  media__upload_image__ok__real.json  media__upload_init__ok.json  tweets__create_tweet__ok.json  tweets__create_tweet__ok__real.json  user.json
twitter-api-v2/: Cargo.toml  README.md
twitter-api-v2/src/: lib.rs
twitter-api-v2/src/endpoints/: mod.rs
twitter-api-v2/src/endpoints/tweets/: manage_tweets.rs  mod.rs
twitter-api-v2/src/endpoints/users/: lookup.rs  mod.rs
twitter-api-v2/src/objects/: error.rs  mod.rs  user.rs
twitter-api-v2/tests/response_body_json_files/: tweets__manage_tweets__create__err.json  users_lookup__me__default_fields.json  users_lookup__me__optional_fields.json
