[package]
name = "oauth1-twitter"
version = "0.2.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Twitter OAuth 1.0a"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/twitter-rs"
homepage = "https://github.com/bk-rs/twitter-rs"
documentation = "https://docs.rs/oauth1-twitter"
keywords = []
categories = []
readme = "README.md"

[dependencies]
http-api-client-endpoint = { version = "0.2", default-features = false }

serde = { version = "1", default-features = false, features = ["derive"] }

reqwest-oauth1 = { version = "0.2", default-features = false }
reqwest = { version = "0.11", default-features = false }
serde_urlencoded = { version = "0.7", default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }

url = { version = "2", default-features = false }
serde_qs = { version = "0.12", default-features = false }
