[package]
name = "twitter-api-v1"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Twitter API Standard v1.1"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/twitter-rs"
homepage = "https://github.com/bk-rs/twitter-rs"
documentation = "https://docs.rs/twitter-api-v1"
keywords = []
categories = []
readme = "README.md"

[dependencies]
