[package]
name = "twitter-api-v1"
version = "0.1.2"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Twitter API Standard v1.1"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/twitter-rs"
homepage = "https://github.com/bk-rs/twitter-rs"
documentation = "https://docs.rs/twitter-api-v1"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
with_tokio = ["tokio", "tokio-util"]
with_tokio_fs = ["with_tokio", "tokio/fs"]

[dependencies]
reqwest-oauth1 = { version = "0.2", default-features = false, features = [
    "multipart",
] }
reqwest = { version = "0.11", default-features = false, features = [
    "default-tls",
    "stream",
    "multipart",
] }

serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
serde-enum-str = { version = "0.3", default-features = false }

tokio = { version = "1", default-features = false, optional = true }
tokio-util = { version = "0.7", default-features = false, optional = true }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
