[package]
name = "twitter-api-v2"
version = "0.0.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Twitter API v2"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/twitter-rs"
homepage = "https://github.com/bk-rs/twitter-rs"
documentation = "https://docs.rs/twitter-api-v2"
keywords = []
categories = []
readme = "README.md"

[dependencies]
http-api-client-endpoint = { version = "0.2", default-features = false }

serde = { version = "1", default-features = false, features = ["derive"] }
serde-aux = { version = "4", default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }

chrono = { version = "0.4", default-features = false, features = ["serde"] }
